src/main/java/com/example/bank/util/error/NoEnoughMoneyException.java
package com.example.bank.util.error;

public class NoEnoughMoneyException extends RuntimeException {
    public NoEnoughMoneyException() {
        super("Not enough money on balance");
    }
}
